--- a/ARApp/CollectionViewCell.xib
+++ b/ARApp/CollectionViewCell.xib
@@ -11,20 +11,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionViewCell" id="gTV-IL-0wX" customClass="CollectionViewCell" customModule="ARApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="201" height="111"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="362"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="201" height="111"/>
+                <rect key="frame" x="0.0" y="0.0" width="300" height="362"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z5k-nh-0S8">
-                        <rect key="frame" x="0.0" y="0.0" width="201" height="111"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="362"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kSb-Ry-NqT">
-                                <rect key="frame" x="0.0" y="32" width="201" height="46"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BN3-G8-06L">
+                                <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4K8-2i-juj">
+                                <rect key="frame" x="0.0" y="327" width="300" height="35"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -34,11 +38,12 @@
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="201" height="111"/>
+            <size key="customSize" width="260" height="254"/>
             <connections>
-                <outlet property="titleLabel" destination="kSb-Ry-NqT" id="Nnr-4s-bKN"/>
+                <outlet property="thumbnail" destination="BN3-G8-06L" id="Brn-MO-8IK"/>
+                <outlet property="thumbnailTitle" destination="4K8-2i-juj" id="r64-9u-aXD"/>
             </connections>
-            <point key="canvasLocation" x="247.10144927536234" y="124.21875"/>
+            <point key="canvasLocation" x="288.40579710144931" y="170.75892857142856"/>
         </collectionViewCell>
     </objects>
 </document>
