--- a/ARApp/CustomTableViewCell.xib
+++ b/ARApp/CustomTableViewCell.xib
@@ -11,19 +11,19 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="123" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="ARApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="337" height="123"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="212" id="KGk-i7-Jjw" customClass="CustomTableViewCell" customModule="ARApp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="337" height="300"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="337" height="123"/>
+                <rect key="frame" x="0.0" y="0.0" width="337" height="300"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ffL-eJ-qsO">
-                        <rect key="frame" x="0.0" y="0.0" width="337" height="123"/>
+                        <rect key="frame" x="0.0" y="0.0" width="337" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="26E-tk-CDe">
-                            <size key="itemSize" width="100" height="100"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="26E-tk-CDe">
+                            <size key="itemSize" width="300" height="300"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -40,7 +40,7 @@
             <connections>
                 <outlet property="collectionView" destination="ffL-eJ-qsO" id="HuY-S9-djx"/>
             </connections>
-            <point key="canvasLocation" x="142.75362318840581" y="128.90625"/>
+            <point key="canvasLocation" x="142.75362318840581" y="158.70535714285714"/>
         </tableViewCell>
     </objects>
     <resources>
